--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -73,6 +73,7 @@ body {
 }
 // Оболонка wrapper ============================================================================================================================================================================================================================================================================================================================================================================================================================================
 .wrapper {
+	position: relative;
 	min-height: 100%;
 	display: flex;
 	flex-direction: column;
@@ -150,4 +151,4 @@ body {
 @import "footer";
 
 // Підключення стилів окремих сторінок
-@import "home";
+@import "index";
